--- a/src/Project/Budget.css
+++ b/src/Project/Budget.css
@@ -3,8 +3,10 @@ body {
 }
 
 .budget_title {
-  margin-left: 90px;
+  margin-left: 160px;
   margin-top: 45px;
+  font-size: 30px;
+  font-weight: bold;
 }
 
 .budget_box {
@@ -17,6 +19,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   position: relative; /* 추가된 부분 */
+  margin-bottom: 20px;
 }
 
 .budget_content {
@@ -44,4 +47,8 @@ body {
 
 .budget_assig{
   margin-bottom: 50px ;
+}
+
+.budget_titlebox {
+  padding:10px;
 }
