--- a/src/Project/Project.css
+++ b/src/Project/Project.css
@@ -59,7 +59,7 @@ svg {
 
 .project_li {
   display: inline-block;
-  margin-right: 150px;
+  margin-right: 130px;
 }
 
 .project_part2 {
@@ -113,3 +113,13 @@ svg {
   text-align: center;
 }
 
+.projectdata_ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.projectdata_li {
+  display: inline-block;
+  margin-right: 120px;
+}
