--- a/src/Project/ProjectEm.css
+++ b/src/Project/ProjectEm.css
@@ -35,12 +35,65 @@ hr {
 
 .projectEm_ul {
   list-style: none;
+  margin-top: 10px;
+  padding: 0;
+}
+
+.projectidEm_li {
+
+  display: inline-block;
+  margin-right: 40px;
+  margin-left: 30px;
+}
+.projectnameEm_li {
+  display: inline-block;
+  margin-right: 85px;
+  margin-left: 30px;
+}
+.projectseEm_li {
+  display: inline-block;
+  margin-right: 85px;
+  margin-left: 30px;
+}
+.projectfinalEm_li {
+  display: inline-block;
+  margin-right: 60px;
+  margin-left: 30px;
+}
+
+.projectEmdata_ul {
+  list-style: none;
   margin: 0;
   padding: 0;
 }
 
-.projectEm_li {
+.projectidEmdata_li {
   display: inline-block;
-  margin-right: 60px;
+  width:30px;
   margin-left: 30px;
+}
+
+.projectnameEmdata_li {
+  display: inline-block;
+  width:110px;
+  margin-left: 30px;
+}
+
+.projectseEmdata_li {
+  display: inline-block;
+  width: 135px;
+  margin-left: 30px;
+}
+
+.projectfinalEmdata_li {
+  display: inline-block;
+  font-size: 12px;
+  margin-left: 40px;
+}
+
+.project_line {
+  border-top: 1px solid;
+  padding-top:8px;
+  padding-bottom:6px; margin-right: 30px;
+
 }
